--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Ignore all .env files
+.env
+
+# Specifically ignore .env in enviroment folder
+enviroment/.env
